# torch-geometric-median

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/torch_geometric_median/: __init__.py  geometric_median.py
tests/: test_calculate_geometric_median.py
